--- a/angular.json
+++ b/angular.json
@@ -831,6 +831,133 @@
         }
       }
     },
+    "ch13": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "projects/ch13",
+      "sourceRoot": "projects/ch13/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/ch13",
+            "index": "projects/ch13/src/index.html",
+            "main": "projects/ch13/src/main.ts",
+            "polyfills": "projects/ch13/src/polyfills.ts",
+            "tsConfig": "projects/ch13/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "projects/ch13/src/favicon.ico",
+              "projects/ch13/src/assets",
+              "projects/ch13/src/android-chrome-192x192.png",
+              "projects/ch13/src/favicon-16x16.png",
+              "projects/ch13/src/mstile-310x150.png",
+              "projects/ch13/src/android-chrome-512x512.png",
+              "projects/ch13/src/favicon-32x32.png",
+              "projects/ch13/src/mstile-310x310.png",
+              "projects/ch13/src/apple-touch-icon.png",
+              "projects/ch13/src/manifest.json",
+              "projects/ch13/src/mstile-70x70.png",
+              "projects/ch13/src/browserconfig.xml",
+              "projects/ch13/src/mstile-144x144.png",
+              "projects/ch13/src/safari-pinned-tab.svg",
+              "projects/ch13/src/mstile-150x150.png"
+            ],
+            "styles": [
+              "projects/ch13/src/lemonmart-theme.scss",
+              "projects/ch13/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/ch13/src/environments/environment.ts",
+                  "with": "projects/ch13/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "ch13:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "ch13:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "ch13:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ch13/src/test.ts",
+            "polyfills": "projects/ch13/src/polyfills.ts",
+            "tsConfig": "projects/ch13/tsconfig.spec.json",
+            "karmaConfig": "projects/ch13/karma.conf.js",
+            "assets": ["projects/ch13/src/favicon.ico", "projects/ch13/src/assets"],
+            "styles": [
+              "projects/ch13/src/lemonmart-theme.scss",
+              "projects/ch13/src/styles.css"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ch13/tsconfig.app.json",
+              "projects/ch13/tsconfig.spec.json",
+              "projects/ch13/e2e/tsconfig.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/ch13/e2e/protractor.conf.js",
+            "devServerTarget": "ch13:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "ch13:serve:production"
+            }
+          }
+        }
+      }
+    },
     "ch14": {
       "projectType": "application",
       "schematics": {},
