--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,17 +38,16 @@ jobs:
           at: /tmp/workspace
       - checkout
       - setup_remote_docker
-      - aws-cli/install
       - aws-cli/setup
-      - run:
-          name: Sign into AWS ecr
-          command: eval $(aws ecr get-login)
-      - run:
-          name: Push it to ECR
-          command: |
-            docker load < /tmp/workspace/built-image.tar.gz
-            docker tag my_app:$CIRCLE_BRANCH $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/lemon-mart:$CIRCLE_BRANCH
-            docker push $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/lemon-mart:$CIRCLE_BRANCH
+      # - run:
+      #     name: Sign into AWS ecr
+      #     command: eval $(aws ecr get-login)
+      # - run:
+      #     name: Push it to ECR
+      #     command: |
+      #       docker load < /tmp/workspace/built-image.tar.gz
+      #       docker tag my_app:$CIRCLE_BRANCH $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/lemon-mart:$CIRCLE_BRANCH
+      #       docker push $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/lemon-mart:$CIRCLE_BRANCH
       - run:
           name: Deploy
           command: npm run aws:deploy
@@ -57,10 +56,15 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - build
+      # - build
+      - aws-ecr/build-and-push-image:
+          dockerfile: integration.Dockerfile
+          path: .
+          repo: 073020584345.dkr.ecr.us-east-1.amazonaws.com
+          tag: 'latest'
       - deploy:
           requires:
-            - build
+            - aws-ecr/build-and-push-image
 # Deployment Integrations https://circleci.com/docs/2.0/deployment-integrations
 # For Docker Hub deploy see https://circleci.com/docs/2.0/building-docker-images/
 # For AWS ECS deploy see https://circleci.com/blog/how-to-build-a-docker-image-on-circleci-2-0/
