--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,8 +59,10 @@ workflows:
     jobs:
       # - build
       - aws-ecr/build-and-push-image:
-          aws-access-key-id: AWS_ACCESS_KEY
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          account-url: '${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com'
+          region: '${AWS_DEFAULT_REGION}'
+          aws-access-key-id: '${AWS_ACCESS_KEY}'
+          aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
           dockerfile: integration.Dockerfile
           path: .
           repo: lemon-mart
