--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,9 +68,9 @@ workflows:
       #     path: .
       #     repo: lemon-mart
       #     tag: 'latest,${CIRCLE_BUILD_NUM}'
-      - deploy:
-          # requires:
-          #   - aws-ecr/build-and-push-image
+      - deploy
+        # requires:
+        #   - aws-ecr/build-and-push-image
 # Deployment Integrations https://circleci.com/docs/2.0/deployment-integrations
 # For Docker Hub deploy see https://circleci.com/docs/2.0/building-docker-images/
 # For AWS ECS deploy see https://circleci.com/blog/how-to-build-a-docker-image-on-circleci-2-0/
