--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,12 +48,12 @@ jobs:
       - run:
           name: Sign Docker into AWS ECR
           command: |
-            ECR_URI=$AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/lemon-mart
-            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_URI
+            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/lemon-mart
       - run:
           name: Push it to ECR
           command: |
             docker load < /tmp/workspace/built-image.tar.gz
+            ECR_URI=$AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/lemon-mart
             docker image tag lemon-mart:$CIRCLE_BRANCH $ECR_URI:$CIRCLE_BRANCH
             docker image tag $ECR_URI:$CIRCLE_BRANCH $ECR_URI:latest
             docker image push $ECR_URI:$CIRCLE_BRANCH
