--- a/package.json
+++ b/package.json
@@ -60,18 +60,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.7",
+    "@angular/animations": "10.0.2",
     "@angular/cdk": "9.2.3",
-    "@angular/common": "9.1.7",
-    "@angular/compiler": "9.1.7",
-    "@angular/core": "9.1.7",
+    "@angular/common": "10.0.2",
+    "@angular/compiler": "10.0.2",
+    "@angular/core": "10.0.2",
     "@angular/fire": "^6.0.0",
     "@angular/flex-layout": "^9.0.0-beta.30",
-    "@angular/forms": "9.1.7",
+    "@angular/forms": "10.0.2",
     "@angular/material": "9.2.3",
-    "@angular/platform-browser": "9.1.7",
-    "@angular/platform-browser-dynamic": "9.1.7",
-    "@angular/router": "9.1.7",
+    "@angular/platform-browser": "10.0.2",
+    "@angular/platform-browser-dynamic": "10.0.2",
+    "@angular/router": "10.0.2",
     "@ngrx/data": "^9.1.2",
     "@ngrx/effects": "^9.1.2",
     "@ngrx/entity": "^9.1.2",
@@ -87,10 +87,10 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.6",
-    "@angular/cli": "9.1.6",
-    "@angular/compiler-cli": "9.1.7",
-    "@angular/language-service": "9.1.7",
+    "@angular-devkit/build-angular": "~0.1000.1",
+    "@angular/cli": "10.0.1",
+    "@angular/compiler-cli": "10.0.2",
+    "@angular/language-service": "10.0.2",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
     "@types/jsonwebtoken": "^8.5.0",
@@ -109,27 +109,27 @@
     "init-dev-env": "^1.0.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.2",
+    "jasmine-spec-reporter": "~5.0.0",
     "js-beautify": "^1.11.0",
-    "karma": "^5.0.5",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^3.0.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-edge-launcher": "^0.4.2",
     "karma-htmlfile-reporter": "^0.3.8",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
     "prettier": "^2.0.5",
-    "protractor": "^7.0.0",
+    "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "~8.10.1",
-    "tslint": "^6.1.2",
+    "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-etc": "^1.10.1",
     "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.6"
   },
   "importSort": {
     ".ts, .tsx": {
