updates to angular fire

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@angular/common": "11.0.0",
     "@angular/compiler": "11.0.0",
     "@angular/core": "11.0.0",
-    "@angular/fire": "^6.0.5",
+    "@angular/fire": "^6.1.0-rc.2",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "11.0.0",
     "@angular/material": "11.0.0",
