--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^14.14.7",
     "angular-unit-test-helper": "^11.0.2",
+    "bigtest": "^0.5.0",
     "codelyzer": "^6.0.1",
     "cross-conf-env": "^1.2.1",
     "dev-norms": "^1.7.1",
