--- a/package.json
+++ b/package.json
@@ -114,11 +114,11 @@
     "karma": "~5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-coverage": "^2.0.3",
     "karma-edge-launcher": "^0.4.2",
-    "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-junit-reporter": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
     "prettier": "^2.1.2",
